objects/ASI_CRM_Price_And_Discount_Detail__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Buy_X__c</fullName>
        <formula>ASI_CRM_Promotion_Code__r.ASI_CRM_Buy_X__c</formula>
        <label>Buy X</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Gross_Sales_Impact_RollUp__c</fullName>
        <label>Gross Sales Impact (RollUp)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Item_Group_Code__c</fullName>
        <formula>IF( CONTAINS(RecordType.DeveloperName, &quot;ASI_CRM_CN&quot;), ASI_CRM_Item_Group_Description__r.ASI_MFM_Item_Group_Code__c, &quot;&quot;)</formula>
        <label>Item Group Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Tax_Rate__c</fullName>
        <label>Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_vs_Current_T1_Non_VAT__c</fullName>
        <formula>IF(( ASI_CRM_Price_And_Discount__r.RecordType.DeveloperName = &quot;ASI_CRM_CN_Customer_Price_and_Discount_Request&quot; || ASI_CRM_Price_And_Discount__r.RecordType.DeveloperName = &quot;ASI_CRM_CN_Customer_Price_and_Discount_Request_RO&quot; ), ASI_CRM_vs_Current_T1_with_VAT__c/IF( ASI_CRM_CN_Tax_Rate__c == 0 , 1.13,1+ASI_CRM_CN_Tax_Rate__c ), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>vs Current T1 (Non VAT)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Current_T1_Price_BT_with_VAT__c</fullName>
        <label>Current T1 Price - BT (with VAT)</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Exclude_Bottle_Rebate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Bottle Rebate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Exclude_OOM_Rebate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude OOM Rebate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Exclude_Portfolio_Rebate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Portfolio Rebate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Get_Y__c</fullName>
        <formula>ASI_CRM_Promotion_Code__r.ASI_CRM_Get_Y__c</formula>
        <label>Get Y</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Gross_Sales_Impact__c</fullName>
        <formula>/* modify VAT rate from 1.17 to 1.16 */
/* modify VAT rate from 1.16 to 1.13 */
ABS( IF(
(( ASI_CRM_Price_And_Discount__r.RecordType.DeveloperName = &quot;ASI_CRM_CN_Customer_Price_and_Discount_Request&quot; || ASI_CRM_Price_And_Discount__r.RecordType.DeveloperName = &quot;ASI_CRM_CN_Customer_Price_and_Discount_Request_RO&quot;))
, IF( NOT(ISBLANK(ASI_CRM_Promotion_Code__c ) ) &amp;&amp;  ASI_CRM_Buy_X__c &gt; 0 &amp;&amp;  ASI_CRM_Get_Y__c &gt; 0, IF( ASI_CRM_Total_Estimated_Vol_BT__c * ( (ASI_CRM_New_Price_BT_non_VAT__c * ( ASI_CRM_Buy_X__c/ (ASI_CRM_Buy_X__c + ASI_CRM_Get_Y__c ) ) ) - (ASI_CRM_Current_T1_Price_BT_with_VAT__c/IF( ASI_CRM_CN_Tax_Rate__c == 0 , 1.13,1+ASI_CRM_CN_Tax_Rate__c ))) &lt; 0
, ASI_CRM_Total_Estimated_Vol_BT__c * ( (ASI_CRM_New_Price_BT_non_VAT__c * ( ASI_CRM_Buy_X__c/(ASI_CRM_Buy_X__c + ASI_CRM_Get_Y__c ) ) ) - (ASI_CRM_Current_T1_Price_BT_with_VAT__c/IF( ASI_CRM_CN_Tax_Rate__c == 0 , 1.13,1+ASI_CRM_CN_Tax_Rate__c ))), 0)
, IF( ( ASI_CRM_New_Price_BT_non_VAT__c &lt; (ASI_CRM_Current_T1_Price_BT_with_VAT__c/IF( ASI_CRM_CN_Tax_Rate__c == 0 , 1.13,1+ASI_CRM_CN_Tax_Rate__c )) )
, ASI_CRM_Total_Estimated_Vol_BT__c * ( (ASI_CRM_New_Price_BT_non_VAT__c ) - (ASI_CRM_Current_T1_Price_BT_with_VAT__c/IF( ASI_CRM_CN_Tax_Rate__c == 0 , 1.13,1+ASI_CRM_CN_Tax_Rate__c ))), 0)), 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Sales Impact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_Group_Description__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipLabel>Price And Discount Details</relationshipLabel>
        <relationshipName>Price_And_Discount_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MOT_Discount_Amount_non_VAT__c</fullName>
        <formula>ASI_CRM_MOT_Price_BT_non_VAT__c - ASI_CRM_New_Price_BT_non_VAT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MOT Discount Amount (non-VAT)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MOT_Discount_Rate__c</fullName>
        <formula>ASI_CRM_MOT_Price_BT_non_VAT__c - ASI_CRM_New_Price_BT_non_VAT__c / ASI_CRM_MOT_Price_BT_non_VAT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MOT Discount Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MOT_Price_BT_non_VAT__c</fullName>
        <label>MOT Price - BT(non-VAT)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_New_Price_BT_non_VAT__c</fullName>
        <formula>ASI_CRM_New_Price_BT_with_VAT__c/ IF(ASI_CRM_CN_Tax_Rate__c == 0, 1.13, 1+ASI_CRM_CN_Tax_Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Price - BT (non-VAT)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_New_Price_BT_with_VAT__c</fullName>
        <label>New Price - BT (with VAT)</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_New_Price_CA_non_VAT__c</fullName>
        <formula>IF ( ASI_CRM_New_Price_BT_non_VAT__c * ASI_CRM_Item_Group_Description__r.ASI_CRM_CN_Pack_Value__c &gt;= 0, ASI_CRM_New_Price_BT_non_VAT__c * ASI_CRM_Item_Group_Description__r.ASI_CRM_CN_Pack_Value__c, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Price - CA (non-VAT)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_New_Price_CA_with_VAT__c</fullName>
        <formula>IF ( ASI_CRM_New_Price_BT_with_VAT__c *  ASI_CRM_Item_Group_Description__r.ASI_CRM_CN_Pack_Value__c  &gt;= 0, ASI_CRM_New_Price_BT_with_VAT__c *  ASI_CRM_Item_Group_Description__r.ASI_CRM_CN_Pack_Value__c, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Price - CA (with VAT)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_OOM_Rebate_Per_Bottle__c</fullName>
        <formula>if(  ASI_CRM_Exclude_OOM_Rebate__c = FALSE , ASI_CRM_SG_Open_Outlet_Marketing_Fund__r.ASI_CRM_SG_Marketing_Fund_for_sales_OO__c
 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OOM Rebate Per Bottle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Price_And_Discount__c</fullName>
        <label>Price And Discount</label>
        <referenceTo>ASI_CRM_Price_And_Discount__c</referenceTo>
        <relationshipLabel>Price And Discount Details</relationshipLabel>
        <relationshipName>Price_And_Discount_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion Code</label>
        <referenceTo>ASI_CRM_Promotion_Master__c</referenceTo>
        <relationshipLabel>Price And Discount Details</relationshipLabel>
        <relationshipName>Price_And_Discount_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Base_Price_Comments__c</fullName>
        <label>Base Price Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Bottle_Rebate_Per_Bottle__c</fullName>
        <formula>if(ASI_CRM_Exclude_Bottle_Rebate__c  = FALSE , ASI_CRM_SG_Bottle_Rebate__r.ASI_CRM_SG_Bottle_Back_Rebate_Amount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bottle Rebate Per Bottle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Bottle_Rebate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bottle Rebate</label>
        <referenceTo>ASI_CRM_Price_And_Discount__c</referenceTo>
        <relationshipLabel>Price And Discount Details (Bottle Rebate)</relationshipLabel>
        <relationshipName>ASI_CRM_SG_Bottle_Rebate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Budget_Net_Price_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Net Price Lookup</label>
        <referenceTo>ASI_CRM_Price_And_Discount__c</referenceTo>
        <relationshipLabel>Price And Discount Details (Budget Net Price)</relationshipLabel>
        <relationshipName>Price_And_Discount_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Budget_Net_Price_Manual__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Budget Net Price (Manual)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Budget_Net_Price__c</fullName>
        <formula>ASI_CRM_SG_Budget_Net_Price_Lookup__r.ASI_CRM_SG_Budget_Net_Price__c / 100 *  ASI_CRM_SG_SKU_MFM__r.ASI_HK_CRM_Std_Bottle_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Cannot_Submit_for_Approval__c</fullName>
        <description>IF(
	(		
		ASI_CRM_SG_Net_Price__c &lt; ASI_CRM_SG_Budget_Net_Price__c
		|| ASI_CRM_SG_Budget_Net_Price__c = 0
		|| isblank(ASI_CRM_SG_Budget_Net_Price__c)  
	)
		&amp;&amp; isblank(ASI_CRM_SG_Base_Price_Comments__c)
	,TRUE
	,FALSE
)</description>
        <formula>IF(
	(		
		ASI_CRM_SG_New_Net_Price_Manual__c &lt; ASI_CRM_SG_Budget_Net_Price_Manual__c
		|| ASI_CRM_SG_Budget_Net_Price_Manual__c = 0
		|| isblank(ASI_CRM_SG_Budget_Net_Price_Manual__c)  
	)
		&amp;&amp; isblank(ASI_CRM_SG_Base_Price_Comments__c)
	,TRUE
	,FALSE
)</formula>
        <label>Cannot Submit for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Clone_Item_to_New_Price_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clone Item to New Price Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Effective_Date__c</fullName>
        <formula>ASI_CRM_Price_And_Discount__r.ASI_CRM_SG_Effective_Date__c</formula>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Exclude_Rebate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude FWO Rebate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Existing_Net_Price__c</fullName>
        <formula>IF(ASI_CRM_SG_SKU_Benchmark_Price1__c = 0 , 0, ASI_CRM_SG_SKU_Benchmark_Price1__c -   ASI_CRM_SG_FWO_Rebate_Per_Bottle__c  -   ASI_CRM_SG_Portfolio_Rebate_Per_Bottle__c -   ASI_CRM_OOM_Rebate_Per_Bottle__c  -   ASI_CRM_SG_Bottle_Rebate_Per_Bottle__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Existing Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_FWO_Rebate_Per_Bottle__c</fullName>
        <formula>if(  ASI_CRM_SG_Exclude_Rebate__c = FALSE ,ASI_CRM_SG_First_Week_Order_Rebate__r.ASI_CRM_SG_Hightest_Rebate_Amount__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FWO Rebate Per Bottle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_First_Week_Order_Rebate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Week Order Rebate</label>
        <referenceTo>ASI_CRM_Price_And_Discount__c</referenceTo>
        <relationshipLabel>Price And Discount Details (First Week Order Rebate)</relationshipLabel>
        <relationshipName>ASI_CRM_SG_First_Week_Order_Rebate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Indicator__c</fullName>
        <formula>IF( (ASI_CRM_SG_Budget_Net_Price_Manual__c   = 0|| isblank(ASI_CRM_SG_Budget_Net_Price_Manual__c  )) , IMAGE($Label.ASI_CRM_SG_Document_Base_URL+&quot;/servlet/servlet.ImageServer?id=&quot; +  $Setup.ASI_CRM_SG_Enhancement__c.ASI_CRM_SG_Indicator_Red__c +&quot;&amp;oid=&quot;+$Organization.Id, &quot;Red&quot;, 15, 30),


IF( ASI_CRM_SG_Budget_Net_Price__c&lt;= ASI_CRM_SG_Net_Price__c , IMAGE($Label.ASI_CRM_SG_Document_Base_URL+&quot;/servlet/servlet.ImageServer?id=&quot; +  $Setup.ASI_CRM_SG_Enhancement__c.ASI_CRM_SG_Indicator_Green__c +&quot;&amp;oid=&quot;+$Organization.Id, &quot;Green&quot;, 15, 30),

IF( (ASI_CRM_SG_Budget_Net_Price__c- ASI_CRM_SG_Net_Price__c ) / ASI_CRM_SG_Budget_Net_Price__c &lt;=0.05 , IMAGE($Label.ASI_CRM_SG_Document_Base_URL+&quot;/servlet/servlet.ImageServer?id=&quot; +  $Setup.ASI_CRM_SG_Enhancement__c.ASI_CRM_SG_Indicator_Amber__c +&quot;&amp;oid=&quot;+$Organization.Id, &quot;Amber&quot; , 15, 30), 

IF( (ASI_CRM_SG_Budget_Net_Price__c - ASI_CRM_SG_Net_Price__c ) / ASI_CRM_SG_Budget_Net_Price__c &gt; 0.05 , IMAGE($Label.ASI_CRM_SG_Document_Base_URL+&quot;/servlet/servlet.ImageServer?id=&quot; +  $Setup.ASI_CRM_SG_Enhancement__c.ASI_CRM_SG_Indicator_Red__c +&quot;&amp;oid=&quot;+$Organization.Id, &quot;Red&quot;, 15, 30), null))))</formula>
        <label>Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Net_Price__c</fullName>
        <formula>ASI_CRM_SG_Price_to_Wholesaler_Outlet__c - ASI_CRM_SG_FWO_Rebate_Per_Bottle__c - ASI_CRM_SG_Portfolio_Rebate_Per_Bottle__c - ASI_CRM_OOM_Rebate_Per_Bottle__c - ASI_CRM_SG_Bottle_Rebate_Per_Bottle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_New_Net_Price_Manual__c</fullName>
        <label>New Net Price (Manual)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Open_Outlet_Marketing_Fund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Open Outlet Marketing Fund</label>
        <referenceTo>ASI_CRM_Price_And_Discount__c</referenceTo>
        <relationshipLabel>Price And Discount Details (Open Outlet Marketing Fund)</relationshipLabel>
        <relationshipName>ASI_CRM_SG_Open_Outlet_Marketing_Fund</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Portfolio_Rebate_Per_Bottle__c</fullName>
        <formula>if(  ASI_CRM_Exclude_Portfolio_Rebate__c = FALSE , ASI_CRM_SG_Portfolio_Rebate__r.ASI_CRM_SG_Portfolio_Back_Rebate_Amount__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portfolio Rebate Per Bottle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Portfolio_Rebate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portfolio Rebate</label>
        <referenceTo>ASI_CRM_Price_And_Discount__c</referenceTo>
        <relationshipLabel>Price And Discount Details (Portfolio Rebate)</relationshipLabel>
        <relationshipName>ASI_CRM_SG_Portfolio_Rebate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Previous_Price__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Price And Discount Detail</label>
        <referenceTo>ASI_CRM_Price_And_Discount_Detail__c</referenceTo>
        <relationshipLabel>Price And Discount Details</relationshipLabel>
        <relationshipName>Price_And_Discount_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Price_and_Discount_RecordType__c</fullName>
        <formula>ASI_CRM_Price_And_Discount__r.RecordType.DeveloperName</formula>
        <label>Price and Discount Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Price_to_Wholesaler_Outlet__c</fullName>
        <label>New Price to Wholesaler</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_SKU_Benchmark_Price1__c</fullName>
        <label>SKU Benchmark Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_SKU_MFM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>Price And Discount Details</relationshipLabel>
        <relationshipName>Price_And_Discount_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_SKU_Price_Cost__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU Price/Cost</label>
        <referenceTo>ASI_CRM_MY_SKUPriceCost__c</referenceTo>
        <relationshipLabel>Price And Discount Details</relationshipLabel>
        <relationshipName>Price_And_Discount_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Sub_brand_ID__c</fullName>
        <formula>CASESAFEID(  ASI_CRM_SG_SKU_MFM__r.ASI_MFM_Sub_brand__c )</formula>
        <label>Sub-brand ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Vs_Budget__c</fullName>
        <formula>(  ASI_CRM_SG_Net_Price__c  -  ASI_CRM_SG_Budget_Net_Price__c  ) /ASI_CRM_SG_Budget_Net_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Vs Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Vs_Existing_Price__c</fullName>
        <formula>IF(ASI_CRM_SG_Existing_Net_Price__c = 0, null ,  ( ASI_CRM_SG_Net_Price__c - ASI_CRM_SG_Existing_Net_Price__c ) /ASI_CRM_SG_Existing_Net_Price__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Vs Existing Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Estimated_Vol_BT__c</fullName>
        <label>Total Estimated Vol - BT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_vs_Current_T1_with_VAT_Percent__c</fullName>
        <formula>IF(ASI_CRM_Current_T1_Price_BT_with_VAT__c &gt; 0, IF( NOT(ISBLANK( ASI_CRM_Promotion_Code__c )) &amp;&amp; NOT(ISBLANK(ASI_CRM_Buy_X__c)) &amp;&amp;  NOT(ISBLANK(ASI_CRM_Get_Y__c)), ((ASI_CRM_New_Price_BT_with_VAT__c * (ASI_CRM_Buy_X__c/(ASI_CRM_Buy_X__c+ASI_CRM_Get_Y__c)))/ASI_CRM_Current_T1_Price_BT_with_VAT__c) - 1, ( ( ASI_CRM_New_Price_BT_with_VAT__c / ASI_CRM_Current_T1_Price_BT_with_VAT__c ) - 1 )), 0)</formula>
        <label>vs Current T1 (with VAT) (%)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_vs_Current_T1_with_VAT__c</fullName>
        <formula>IF(( ASI_CRM_Price_And_Discount__r.RecordType.DeveloperName = &quot;ASI_CRM_CN_Customer_Price_and_Discount_Request&quot; || ASI_CRM_Price_And_Discount__r.RecordType.DeveloperName = &quot;ASI_CRM_CN_Customer_Price_and_Discount_Request_RO&quot; )
, IF( NOT(ISBLANK( ASI_CRM_Promotion_Code__c )) &amp;&amp; ASI_CRM_Buy_X__c &gt; 0 &amp;&amp; ASI_CRM_Get_Y__c &gt; 0 &amp;&amp; NOT(ISBLANK(ASI_CRM_Current_T1_Price_BT_with_VAT__c))
, ((ASI_CRM_New_Price_BT_with_VAT__c * (ASI_CRM_Buy_X__c/(ASI_CRM_Buy_X__c+ASI_CRM_Get_Y__c))) - ASI_CRM_Current_T1_Price_BT_with_VAT__c)
, ( ( ASI_CRM_New_Price_BT_with_VAT__c - ASI_CRM_Current_T1_Price_BT_with_VAT__c )))
, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>vs Current T1 (with VAT)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_WS_Disount_Value__c</fullName>
        <label>Disount Value</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_WS_GL_Offset_AC_Code__c</fullName>
        <formula>IF(ISBLANK(ASI_CTY_CN_WS_Level2_Promotion_Code__c) , NULL,  IF(CONTAINS(ASI_CTY_CN_WS_Promotion_Type__c,&apos;Trade&apos;) ,  TEXT( ASI_CTY_CN_WS_Level1_Promotion_Code__r.ASI_CTY_CN_WS_Trade_a_p_GL_Offset__c) &amp; &quot;/&quot; &amp; 
 ASI_CTY_CN_WS_Level1_Promotion_Code__r.ASI_CTY_CN_WS_Trade_a_p_AC_Code__r.ASI_MFM_A_C_Code__c , 
IF(CONTAINS(ASI_CTY_CN_WS_Promotion_Type__c,&apos;Normal&apos;) ,  TEXT( ASI_CTY_CN_WS_Level1_Promotion_Code__r.ASI_CTY_CN_WS_Normal_GL_Offset__c) &amp; &quot;/&quot; &amp;   ASI_CTY_CN_WS_Level1_Promotion_Code__r.ASI_CTY_CN_WS_Normal_AC_Code__r.ASI_MFM_A_C_Code__c , 
IF(CONTAINS(ASI_CTY_CN_WS_Promotion_Type__c,&apos;A&amp;D&apos;) ,  TEXT( ASI_CTY_CN_WS_Level1_Promotion_Code__r.ASI_CTY_CN_WS_AD_GL_Offset__c) &amp; &quot;/&quot; &amp; ASI_CTY_CN_WS_Level1_Promotion_Code__r.ASI_CTY_CN_WS_AD_AC_Code__r.ASI_MFM_A_C_Code__c  ,NULL))) )</formula>
        <label>GL Offset &amp; A/C Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_WS_Level1_Promotion_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Level 1 Promotion Code</label>
        <referenceTo>ASI_CRM_Promotion_Master__c</referenceTo>
        <relationshipLabel>Price And Discount Details (Level 1 Promotion Code)</relationshipLabel>
        <relationshipName>Price_Discount_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_WS_Level2_Promotion_Code__c</fullName>
        <formula>IF(ISBLANK(ASI_CTY_CN_WS_Level1_Promotion_Code__c), NULL, 
  IF(CONTAINS(ASI_CRM_Price_And_Discount__r.RecordType.Name, &apos;Trade a&amp;p Discount&apos;) ,  ASI_CTY_CN_WS_Level1_Promotion_Code__r.ASI_CTY_CN_WS_Trade_a_p_Promotion_Code__c , 
   IF(CONTAINS(ASI_CRM_Price_And_Discount__r.RecordType.Name, &apos;Normal Discount&apos;),  ASI_CTY_CN_WS_Level1_Promotion_Code__r.ASI_CTY_CN_WS_Normal_Promotion_Code__c , 
    IF(CONTAINS(ASI_CRM_Price_And_Discount__r.RecordType.Name, &apos;A&amp;D Discount&apos;),   ASI_CTY_CN_WS_Level1_Promotion_Code__r.ASI_CTY_CN_WS_AD_Promotion_Code__c, NULL) ) ) )</formula>
        <label>Level 2 Promotion Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_WS_Promotion_Type__c</fullName>
        <formula>IF(CONTAINS(ASI_CRM_Price_And_Discount__r.RecordType.Name, &apos;Trade a&amp;p Discount&apos;),&apos;Trade a&amp;p Discount&apos;, 
    IF(CONTAINS(ASI_CRM_Price_And_Discount__r.RecordType.Name, &apos;Normal Discount&apos;), &apos;Normal Discount&apos;, IF(CONTAINS(ASI_CRM_Price_And_Discount__r.RecordType.Name, &apos;A&amp;D Discount&apos;), &apos;A&amp;D Discount&apos;, &apos;Price Discount&apos;)))</formula>
        <label>Promotion Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_WS_Value_Type__c</fullName>
        <label>Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>% base price</fullName>
                </value>
                <value>
                    <fullName>add on amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Price And Discount Detail</label>
    <nameField>
        <displayFormat>PDD-{00000000}</displayFormat>
        <label>Price And Discount Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price And Discount Details</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Price_And_Discount_Detail</fullName>
        <active>true</active>
        <label>CN Price And Discount Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Price_and_Detail</fullName>
        <active>true</active>
        <label>SG Price and Detail</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_CN_CheckTotalEst</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(ASI_CRM_New_Price_BT_with_VAT__c)) &amp;&amp; ISBLANK( ASI_CRM_Total_Estimated_Vol_BT__c ) &amp;&amp;   ASI_CRM_Price_And_Discount__r.RecordType.DeveloperName == &apos;ASI_CRM_CN_Customer_Price_and_Discount_Request&apos;</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Total_Estimated_Vol_BT__c</errorDisplayField>
        <errorMessage>Total Estimated Vol - BT is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_of_JDE_Code</fullName>
        <active>false</active>
        <errorConditionFormula>CONTAINS(ASI_CRM_Price_And_Discount__r.RecordType.DeveloperName, &apos;ASI_CRM_CN_Customer_Price_and_Discount_Request&apos;) &amp;&amp; ( ( NOT( ASI_CRM_Price_And_Discount__r.ASI_CRM_RTD__c ) &amp;&amp; ISBLANK( ASI_CRM_Price_And_Discount__r.ASI_CRM_Customer__r.ASI_CRM_CN_JDE_Code__c ) ) || ( ASI_CRM_Price_And_Discount__r.ASI_CRM_RTD__c &amp;&amp; ISBLANK( ASI_CRM_Price_And_Discount__r.ASI_CRM_Customer__r.ASI_CRM_CN_JDE_Code_RTD__c ) ) )</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>Customer JDE Code can not be NULL</errorMessage>
    </validationRules>
</CustomObject>